# py_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README-dev.md  README.md  pyproject.toml  pytest.ini  update_precommit.py
.github/workflows/: black.yml  flake8.yml  update-pre-commit-config.yaml
CHANGE_ME/: module1.py
tests/: conftest.py  test_sample.py
