[tool.poetry]
name = "CHANGE_ME"
version = "0.0.1"
description = "Template for Python projects"
authors = ["Ana <56302061+anafvana@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
Flake8-pyproject = "^1.2.3"
autoflake = "^2.3.1"
PyYAML = "^6.0.2"
types-PyYAML = "^6.0.12.20240917"
types-requests = "^2.32.0.20241016"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[tool.mypy]
python_version = "3.13"

[tool.flake8]
ignore = ['E501']
per-file-ignores = ['__init__.py:F401,F403']
exclude = [".git", "__pycache__", "old", "build", "dist"]
count = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
